--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,11 +1,17 @@
 build: false
 
+services:
+  - docker
+
 environment:
     PYTHON: "C:\\Python27"
     PYTHON_VERSION: "2.7.15"
     PYTHON_ARCH: "32"
 
     matrix:
+        - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu
+          CONAN_GCC_VERSIONS: 7
+          CONAN_DOCKER_IMAGE: lasote/conangcc7
         - MINGW_CONFIGURATIONS: '4.9@x86_64@seh@posix, 5@x86_64@seh@posix, 6@x86_64@seh@posix, 7@x86_64@seh@posix'
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
           CONAN_VISUAL_VERSIONS: 12
