--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,6 +3,8 @@ build: false
 services:
   - docker
 
+stack: python 3.6
+
 environment:
     PYTHON: "C:\\Python27"
     PYTHON_VERSION: "2.7.15"
@@ -33,9 +35,9 @@ environment:
           CONAN_BUILD_TYPES: Debug
 
 install:
-  - set PATH=%PATH%;%PYTHON%/Scripts/
-  - pip.exe install conan --upgrade
-  - pip.exe install conan_package_tools bincrafters_package_tools
+  - cmd: set PATH=%PATH%;%PYTHON%/Scripts/
+  - pip install conan --upgrade
+  - pip install conan_package_tools bincrafters_package_tools
   - conan user # It creates the conan data directory
 
 test_script:
